--- a/index.css
+++ b/index.css
@@ -1,18 +1,27 @@
+
+
 body{
     font-family: "Inter", sans-serif;
-    background-color: #e6e6e6;
+    background-color: #413d3d;
     margin: 0;
     height: 200vh;
+    overflow-x: hidden;
 }
 
+.content{
+    background: #413d3d;
+    justify-content: center;
+    left: -50px;
+}
 
 header{
     position: relative;
-    background-color: rgb(65, 59, 59);
+    background-color: rgb(0, 0, 0);
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 0 2%;
+    width: 100%;
 }
 
 h2, a{
@@ -41,21 +50,79 @@ section{
     width: 350px;
     border-radius: 1000px;
     margin: 0 auto;
-    /* padding: 100px; */
     display: inline-block;
     margin-top: 100px;
-    margin-left: 730px;
     box-shadow: 0px 4px  6px;
 }
 
 .hero{
-    height: 100vh;
+    height: 93vh;
     width: 100%;
-    background-image: url("img/background.webp");
-    /* background-repeat: no-repeat; */
+    background-image: url("img/me.png");
     background-size: cover;
+    background-position: center top;
+    text-align: center;
+    max-width: 100%;
+    transition: 0.3s ease-in-out;
 }
 
-.cardport{
+.info{
+
+    margin: 20px;
+    width: 400px;
+    text-align: left;
+    box-shadow: 0px 4px 4px rgb(0, 0, 0);
+    display: inline-block;
+    margin-top: 50px auto;
+    background-color: #2e2c2c;
+    /* margin-right: -10px; */
     
+}
+
+.info > img{
+    width: 100%;
+    height: 266px;
+    object-fit: cover;
+}
+
+.info > p{
+    padding: 10px;
+    font-size: 20px;
+    color: #d6d6d6e5;
+}
+.info > h1{
+    color: rgba(240, 248, 255, 0.884);
+}
+
+.cards{
+    justify-content: center;
+    display: flex;
+}
+
+@media (max-width: 320px) {
+    .cards{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+    }
+
+    h1{
+        text-align: center;
+    }
+
+    p{
+        font-size: 8px;
+        padding: 5px;
+    }
+
+    .info{
+        width: 88%;
+    }
+    .info > p{
+        padding: 25px;
+    }
+
+    .cabecalho > a{
+        display: none;
+    }
 }
