--- a/index.css
+++ b/index.css
@@ -2,36 +2,91 @@
 
 body{
     font-family: "Inter", sans-serif;
-    background-color: #413d3d;
+    background: url(img/background.png);
     margin: 0;
     height: 200vh;
     overflow-x: hidden;
 }
 
 .content{
-    background: #413d3d;
+    background: url(img/background.png);
     justify-content: center;
     left: -50px;
 }
 
 header{
     position: relative;
-    background-color: rgb(0, 0, 0);
+    background-color: rgba(26, 26, 26, 0);
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0 2%;
+    padding: 0%;
     width: 100%;
+    
+}
+
+header > h2{
+    padding: 0 2%;
 }
 
 h2, a{
     color: rgba(255, 255, 255, 0.836);
-    text-decoration: none;
+    text-decoration: none; 
 }
 
-a{
+#WhatsApp:hover{
+    margin: 1px;
     transform: scale(1.1);
+    transition: 0.2s ease-in-out;
+    color: rgb(67, 220, 91);
 }
+
+#linkdln:hover{
+    margin: 1px;
+    transform: scale(1.1);
+    transition: 0.2s ease-in-out;
+    color: rgb(1, 98, 148);
+    
+}
+
+#git:hover{
+    margin: 1px;
+    transform: scale(1.1);
+    transition: 0.2s ease-in-out;
+    color: rgba(29, 29, 29, 0.781);
+    
+}
+
+#insta:hover{
+    color: rgb(202, 61, 146);
+    margin: 1px;
+    transform: scale(1.1);
+    transition: 0.2s ease-in-out;
+}
+
+.textHeader{
+    position: relative;
+    display: inline-block;
+}
+
+.textHeader::after{
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -3px;
+    width: 0%;
+    height: 3px;
+    background-color: rgb(255, 255, 255, 0.836);
+    transform: scale(1.1);
+    transition:  0.3s ease;
+}
+
+.textHeader:hover::after{
+    width: 100%;
+}
+
 img{
     width: 30px;
     height: auto;
@@ -43,16 +98,6 @@ section{
     display: flex;
     align-items: center;
     gap: 20px;
-}
-
-#perfil{
-    height: auto;
-    width: 350px;
-    border-radius: 1000px;
-    margin: 0 auto;
-    display: inline-block;
-    margin-top: 100px;
-    box-shadow: 0px 4px  6px;
 }
 
 .hero{
@@ -67,22 +112,27 @@ section{
 }
 
 .info{
-
-    margin: 20px;
+    
+    margin: 40px;
+    margin-top: 0px;
     width: 400px;
     text-align: left;
-    box-shadow: 0px 4px 4px rgb(0, 0, 0);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.534);
     display: inline-block;
     margin-top: 50px auto;
-    background-color: #2e2c2c;
-    /* margin-right: -10px; */
-    
+    background-color: #3d3d3d;
+    margin-right: -10px;
+    border-radius: 10px;
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
 }
 
 .info > img{
     width: 100%;
     height: 266px;
     object-fit: cover;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 10px;
 }
 
 .info > p{
@@ -91,6 +141,7 @@ section{
     color: #d6d6d6e5;
 }
 .info > h1{
+    padding: 10px;
     color: rgba(240, 248, 255, 0.884);
 }
 
