--- a/about.css
+++ b/about.css
@@ -1,5 +1,4 @@
 
-
 body{
     font-family: "Inter", sans-serif;
     background: url(img/background.png);
@@ -9,12 +8,6 @@ body{
     object-fit: cover;
     background-size: cover;
     background-position: center top;
-}
-
-.content{
-    background: url(img/background.png);
-    justify-content: center;
-    left: -50px;
 }
 
 header{
@@ -90,7 +83,7 @@ h2, a{
 }
 
 img{
-    width: 30px;
+    width: 400px;
     height: auto;
     pointer-events: visible;
     transition: .2s;
@@ -102,80 +95,24 @@ section{
     gap: 20px;
 }
 
-.hero{
-    height: 93vh;
-    width: 100%;
-    background-image: url("img/me.png");
-    background-size: cover;
-    background-position: center top;
-    text-align: center;
-    max-width: 100%;
-    transition: 0.3s ease-in-out;
-}
-
-.info{
-    
-    margin: 40px;
-    margin-top: 0px;
+#cardAbout{
     width: 400px;
-    text-align: left;
-    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.534);
-    display: inline-block;
-    margin-top: 50px auto;
-    background-color: #3d3d3d;
-    margin-right: -10px;
-    border-radius: 10px;
-    backdrop-filter: blur(10px);
-    -webkit-backdrop-filter: blur(10px);
+    height: 400px;
+    margin-left: 900px;
+    color: white;
+    border-radius: 6px 6px 4px;
+    box-shadow: 2px 2px 8px black;
 }
 
-.info > img{
-    width: 100%;
-    height: 266px;
-    object-fit: cover;
-    border-top-left-radius: 15px;
-    border-top-right-radius: 10px;
+h1{
+    position: relative;
+    text-align: justify;
+    margin-left: 10px;
 }
 
-.info > p{
-    padding: 10px;
-    font-size: 20px;
-    color: #d6d6d6e5;
-}
-.info > h1{
-    padding: 10px;
-    color: rgba(240, 248, 255, 0.884);
-}
-
-.cards{
-    justify-content: center;
-    display: flex;
-}
-
-@media (max-width: 320px) {
-    .cards{
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-    }
-
-    h1{
-        text-align: center;
-    }
-
-    p{
-        font-size: 8px;
-        padding: 5px;
-    }
-
-    .info{
-        width: 88%;
-    }
-    .info > p{
-        padding: 25px;
-    }
-
-    .cabecalho > a{
-        display: none;
-    }
+p{
+    position: relative;
+    text-align: center;
+    font-size: 15px;
+    margin-top: 100px;
 }
