--- a/about.css
+++ b/about.css
@@ -135,3 +135,11 @@ footer{
     bottom: 0;
 }
 
+#perfil{
+    background-color: red;
+    width: 300px;
+    height: 400px;
+    margin-left: 100px;
+    margin-right: auto;
+    
+}
