--- a/about.css
+++ b/about.css
@@ -136,10 +136,17 @@ footer{
 }
 
 #perfil{
-    background-color: red;
-    width: 300px;
+    background-color: rgba(22, 21, 21, 0.822);
+    width: 600px;
     height: 400px;
-    margin-left: 100px;
+    margin-top: 70px;
+    margin-left: 20px;
     margin-right: auto;
-    
+    border-radius: 6px 6px 4px;
+    box-shadow: 2px 2px 8px black;
+    color: #ffffff;
 }
+
+footer:hover[
+    
+]
