--- a/index.css
+++ b/index.css
@@ -121,7 +121,7 @@ section{
     text-align: left;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.534);
     display: inline-block;
-    margin-top: 50px auto;
+    margin-top: 50px;
     background-color: rgba(22, 21, 21, 0.822);
     margin-right: -10px;
     border-radius: 10px;
