--- a/index.css
+++ b/index.css
@@ -127,6 +127,16 @@ section{
     border-radius: 10px;
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
+    overflow: hidden;
+    transition: all 0.4s ease;
+}
+
+.info:hover{
+    background: linear-gradient(rgb(163, 163, 163), rgb(61, 61, 61));
+    color: #d6d6d6e5;
+    transform: scale(1.03);
+    border-radius: 20px;
+    box-shadow: 0 8px 20px rgba(0,0,0,0.2);
 }
 
 .info > img{
